[tool.poetry]
name = "data-analyzer"
version = "0.1.0"
description = "Analyze data from database using AI Agents"
authors = ["Saransh Pandya <its.saranshpandya@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "data_analyzer" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
langgraph = "^0.3.31"
sqlalchemy = "^2.0.40"
langchain-google-genai = "^2.1.3"
pwinput = "^1.0.3"
colorama = "^0.4.6"
pytest = "^8.3.5"
ipython = "^9.1.0"
langchain-core = "^0.3.55"
pyppeteer = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
